--- a/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
@@ -23,7 +23,7 @@
             <input type="hidden" id="idProfessor" name="idProfessor" value="@solicitacao.professor.get.id">
 
 		<br>
-		<b>Relator:  </b></span>
+		<b>Relator:  </b>
 		<select id=idRelator name="idRelator" value="">
 		@for(user <- users){
     			<option value=@user.id>@user.nome</option>
