--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[br.ufes.scap.models.UserFormData],users : Seq[br.ufes.scap.models.User])(implicit request: RequestHeader)
+@(userForm: Form[br.ufes.scap.models.UserFormData])(implicit request: RequestHeader)
 @main() {
 
     @userForm.globalError.map { error =>
