--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -11,16 +11,10 @@
 <a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)">Editar seu perfil</a>
 <br>
 <br>
-<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes">Listar todas as solicitações
-@if(!(user.get.tipo.equals("SECRETARIO"))){
- abertas</a>
-}
+<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes">Listar Solicitações
 <br>
 <br>
 @if(user.get.tipo.equals("PROFESSOR")){
-<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.minhasSolicitacoes">Ver minhas solicitacões</a>
-<br>
-<br>
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.addSolicitacao">Adicionar Solicitação</a>
 <br>
 <br>
