--- a/app/br/ufes/scap/views/addParentesco.scala.html
+++ b/app/br/ufes/scap/views/addParentesco.scala.html
@@ -42,9 +42,7 @@
 
 
             <br/>
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Parentesco</button>
-            </div>
+            <button type="submit" ">Adicionar Novo Parentesco</button>
 
         </div>
     </fieldset>
@@ -54,11 +52,9 @@
 <br>
 <br>
 
-<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
-            </div>
+		
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get" align="center">
+                <button type="submit" >Voltar ao Menu Principal</button>
 </form>
 
 }
