--- a/app/br/ufes/scap/views/listUsers.scala.html
+++ b/app/br/ufes/scap/views/listUsers.scala.html
@@ -45,19 +45,15 @@ table, th, td {
 
 <br>
 <br>
-<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.UsersController.addUser()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Novo Usuário</button>
-            </div>
+<form role="form" action='@br.ufes.scap.controllers.routes.UsersController.addUser()' method="get" align="center">
+                <button type="submit" >Adicionar Novo Usuário</button>
 </form>
+
 <br>
 <br>
-<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
-            </div>
+
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get" align="center">
+                <button type="submit" >Voltar ao Menu Principal</button>
 </form>
 
 </html>
