--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -14,6 +14,9 @@
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes">Listar Solicitações
 <br>
 <br>
+<a href="@br.ufes.scap.controllers.routes.MandatosController.listarMandatos">Listar Mandatos
+<br>
+<br>
 @if(user.get.tipo.equals("PROFESSOR")){
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.addSolicitacao">Adicionar Solicitação</a>
 <br>
