--- a/app/br/ufes/scap/views/addSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/addSolicitacao.scala.html
@@ -106,7 +106,7 @@
 
             <br/>
             <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Adicionar Nova Solicitação</button>
+                <button type="submit">Adicionar Nova Solicitação</button>
             </div>
 
         </div>
@@ -117,11 +117,9 @@
 <br>
 <br>
 
-<form id="user-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
-            </div>
+		
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get" align="center">
+                <button type="submit" >Voltar ao Menu Principal</button>
 </form>
 
 }
