--- a/app/br/ufes/scap/views/listParentescos.scala.html
+++ b/app/br/ufes/scap/views/listParentescos.scala.html
@@ -1,4 +1,4 @@
-@(parentescoForm : Form[br.ufes.scap.models.ParentescoFormData], Parentescos : Seq[br.ufes.scap.models.ParentescoFull])(implicit request: RequestHeader)
+@(parentescos : Seq[br.ufes.scap.models.ParentescoFull])(implicit request: RequestHeader)
 @main() {
 
 <html>
@@ -25,11 +25,11 @@ table, th, td {
                     <th>PROFESSOR(A)</th>
 			  <th>DELETAR PARENTESCO</th>
                 </tr>
-                @for(p <- Parentescos){
+                @for(p <- parentescos){
                 <tr>
                     <td>@p.id</td>
-                    <td>@p.professor1.get.nome</td>
-                    <td>@p.professor2.get.nome</td>
+                    <td>@p.professor1.nome</td>
+                    <td>@p.professor2.nome</td>
                     <td><a href="@br.ufes.scap.controllers.routes.ParentescosController.deleteParentesco(p.id)" 
    class="btn btn-danger" onclick="return confirm('Você tem certeza de que deseja excluir esse parentesco?');">Deletar</a></td>
                 </tr>
