--- a/app/br/ufes/scap/views/listSolicitacoes.scala.html
+++ b/app/br/ufes/scap/views/listSolicitacoes.scala.html
@@ -16,7 +16,7 @@ table, th, td {
 </head>
 
 <body>
-<h2>Usuários</h2>
+<h2>Solicitações</h2>
 <table style="width:100%">
                 <tr>
                     <th>ID</th>
