--- a/app/br/ufes/scap/views/verSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/verSolicitacao.scala.html
@@ -1,5 +1,6 @@
 @(solicitacao : br.ufes.scap.models.SolicitacaoFull, userTipo : String)(implicit request: RequestHeader)
 
+@import br.ufes.scap.models.{TipoUser, StatusSolicitacao}
 @main() {
 
 <p>Solicitacao para o evento "@solicitacao.nomeEvento"</p> 
@@ -16,7 +17,7 @@
 <br>
 
 
-@if(userTipo.equals("SECRETARIO") && (solicitacao.status.equals("REPROVADA") || solicitacao.status.equals("APROVADA-PRPPG"))){
+@if(userTipo.equals(TipoUser.Sec.toString()) && (solicitacao.status.equals("REPROVADA") || solicitacao.status.equals(StatusSolicitacao.AprovadaPRPPG.toString()))){
 <form action="@br.ufes.scap.controllers.routes.SolicitacoesController.arquivar(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Arquivar">
 </form>
@@ -24,7 +25,7 @@
 <br>
 }
 
-@if(userTipo.equals("SECRETARIO") && (solicitacao.status.equals("APROVADA-DI") || solicitacao.status.equals("APROVADA-CT"))){
+@if(userTipo.equals(TipoUser.Sec.toString()) && (solicitacao.status.equals("APROVADA-DI") || solicitacao.status.equals(StatusSolicitacao.AprovadaCT.toString()))){
 <form action="@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumentoForm(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Registrar Parecer">
 </form>
@@ -32,7 +33,7 @@
 <br>
 }
 
-@if(userTipo.equals("CHEFE") && solicitacao.status.equals("INICIADA")){
+@if(userTipo.equals(TipoUser.Chefe.toString()) && solicitacao.status.equals(StatusSolicitacao.Iniciada.toString())){
 <form action="@br.ufes.scap.controllers.routes.SolicitacoesController.encaminharSolicitacao(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Designar Relator">
 </form>
@@ -40,7 +41,7 @@
 <br>
 }
 
-@if(userTipo.equals("AUTOR") && !solicitacao.status.equals("CANCELADA")){
+@if(userTipo.equals(TipoUser.Autor.toString()) && !solicitacao.status.equals(StatusSolicitacao.Cancelada.toString())){
 <form action="@br.ufes.scap.controllers.routes.SolicitacoesController.deleteSolicitacao(solicitacao.id)" align="center" method="get">
   <input type="submit" onclick="return confirm('Você tem certeza de que deseja cancelar essa solicitação?');" value="Deletar">
 </form>
@@ -48,7 +49,7 @@
 <br>
 }
 
-@if(userTipo.equals("PROFESSOR") && (solicitacao.status.equals("INICIADA") || solicitacao.status.equals("LIBERADA")) ){
+@if(userTipo.equals(TipoUser.Prof.toString()) && (solicitacao.status.equals(StatusSolicitacao.Iniciada.toString()) || solicitacao.status.equals(StatusSolicitacao.Liberada.toString())) ){
 <form action="@br.ufes.scap.controllers.routes.PareceresController.manifestarContraForm(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Manifestar-se Contra">
 </form>
@@ -56,7 +57,7 @@
 <br>
 }
 
-@if(userTipo.equals("RELATOR") && solicitacao.status.equals("LIBERADA")){
+@if(userTipo.equals(TipoUser.Relator.toString()) && solicitacao.status.equals(StatusSolicitacao.Liberada.toString())){
 <form action="@br.ufes.scap.controllers.routes.PareceresController.registrarParecer(solicitacao.id)" align="center" method="get">
   <input type="submit" value="Registrar Parecer">
 </form>
