Authentication Service classe totalmente implementada

--- a/app/br/ufes/scap/views/addMandato.scala.html
+++ b/app/br/ufes/scap/views/addMandato.scala.html
@@ -1,4 +1,4 @@
-@(mandatoForm: Form[br.ufes.scap.models.MandatoFormData],users : Seq[br.ufes.scap.models.User])(implicit request: RequestHeader)
+@(mandatoForm: Form[br.ufes.scap.models.MandatoFormData],users : Seq[br.ufes.scap.models.User])()
 @main() {
 
     @mandatoForm.globalError.map { error =>
