--- a/app/br/ufes/scap/views/editUser.scala.html
+++ b/app/br/ufes/scap/views/editUser.scala.html
@@ -1,4 +1,4 @@
-@(userEditForm: Form[br.ufes.scap.models.UserEditFormData],user : Option[br.ufes.scap.models.User])(implicit request: RequestHeader)
+@(userEditForm: Form[br.ufes.scap.models.UserEditFormData],user : Option[br.ufes.scap.models.User])()
 
 @main() {
 
