--- a/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/encaminharSolicitacao.scala.html
@@ -18,9 +18,9 @@
             </div>
             <br/>
 
-<p>Designar relator para a solicitacao do professor @solicitacao.professor.get.id para o evento @solicitacao.nomeEvento</p>
+<p>Designar relator para a solicitacao do professor @solicitacao.professor.id para o evento @solicitacao.nomeEvento</p>
 
-            <input type="hidden" id="idProfessor" name="idProfessor" value="@solicitacao.professor.get.id">
+            <input type="hidden" id="idProfessor" name="idProfessor" value="@solicitacao.professor.id">
 
 		<br>
 		<b>Relator:  </b>
