--- a/app/br/ufes/scap/views/listParentescos.scala.html
+++ b/app/br/ufes/scap/views/listParentescos.scala.html
@@ -1,4 +1,4 @@
-@(parentescos : Seq[br.ufes.scap.models.ParentescoFull])(implicit request: RequestHeader)
+@(parentescos : Seq[br.ufes.scap.models.ParentescoFull])()
 @main() {
 
 <html>
