--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[br.ufes.scap.models.UserFormData], user : Option[br.ufes.scap.models.User])(implicit request: RequestHeader)
+@(userForm: Form[br.ufes.scap.models.UserFormData], user : Option[br.ufes.scap.models.User])()
 @main() {
 <!DOCTYPE html>
 <html>
