--- a/app/br/ufes/scap/views/addParecerContra.scala.html
+++ b/app/br/ufes/scap/views/addParecerContra.scala.html
@@ -1,4 +1,4 @@
-@(manifestacaoForm: Form[br.ufes.scap.models.ManifestacaoFormData], solicitacao : Option[br.ufes.scap.models.SolicitacaoFull])(implicit request: RequestHeader)
+@(manifestacaoForm: Form[br.ufes.scap.models.ManifestacaoFormData], solicitacao : br.ufes.scap.models.SolicitacaoFull)(implicit request: RequestHeader)
 @main() {
 
     @manifestacaoForm.globalError.map { error =>
@@ -8,7 +8,7 @@
 	}
 
 <body>
-      <form action = "@br.ufes.scap.controllers.routes.PareceresController.manifestarContra(solicitacao.get.id)" align="center"
+      <form action = "@br.ufes.scap.controllers.routes.PareceresController.manifestarContra(solicitacao.id)" align="center"
 	method = "post">
          <br />
          
