--- a/app/br/ufes/scap/views/login.scala.html
+++ b/app/br/ufes/scap/views/login.scala.html
@@ -7,42 +7,32 @@
         </p>
 	}
 
+<body bgcolor="teal">
 
-<form id="user-data-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post"
-      class="form-horizontal" align="center" autocomplete="off">
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post"
+      align="center" autocomplete="off">
 
     <fieldset class="user-fieldset">
-        <div class="col-xs-4">
-            <div class="user-form">
-                <label class="form-title"
-                       style="color: #F8741B; font-size: 22px;font-weight: bold; text-decoration:none">Login</label>
-            </div>
-            <br/>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Matricula  </b></span>
-                <input type="text" class="form-control" id="matricula" name="matricula" value=""
-                       placeholder="Matricula" aria-describedby="sizing-addon1" required>
+                <h1><font color="white">Login</font></h1>
+
+ 		    <font color="white">Matricula &nbsp;&nbsp </font>  
+                <input type="text" id="matricula" name="matricula" value="" placeholder="matricula" required>
                 <br>
-            </div>
 
 		<br>
 
-            <div class="input-group input-group-sm">
-                <span class="input-group-addon" id="sizing-addon2"><b>Senha  </b></span>
-                <input type="password" class="form-control" id="password" name="password" value="" placeholder="Senha"
-                       aria-describedby="sizing-addon1" required>
+               <font color="white"> Senha &nbsp;&nbsp </font> 
+                <input type="password" id="password" name="password" value="" placeholder="senha" required>
                 <br>
-            </div>
 
 		<br>
 
-            <div class="form-actions controls ynt-btn-xlarge">
                 <button type="Login" class="btn btn-primary ynt-btn-orange">Login</button>
-            </div>
 
-        </div>
+
     </fieldset>
 </form>
+</body>
 
 }
