--- a/app/br/ufes/scap/views/main.scala.html
+++ b/app/br/ufes/scap/views/main.scala.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>SCAP - Sistema de Controle de Afastamento de Professores </h1>
+                    <h1><font color="white"> SCAP - Sistema de Controle de Afastamento de Professores</font>  </h1>
                     @content
                 </div>
             </div>
